<resources>
    <string name="we_app_name">团节</string>
    <string name="home">首页</string>
    <string name="discover">发现</string>
    <string name="mall">商城</string>
    <string name="mine">我的</string>
    <!-- 首页 -->
    <string name="points_mall">积分商城</string>
    <string name="food">美食</string>
    <string name="movie">电影</string>
    <string name="hotel">酒店</string>
    <string name="beauty">丽人</string>
    <string name="ktv">KTV</string>
    <string name="entertainment">休闲娱乐</string>
    <string name="ticket">车票</string>
    <string name="recommended_today">今日推荐</string>
    <string name="just_looking_around">随便看看</string>
    <string name="order_tag">订</string>
    <string name="group_tag">团</string>
    <string name="bug_tag">买</string>
    <string name="search">搜索</string>
    <!--<string name="confirm">确认</string>-->
    <string name="search_hotel">查找酒店</string>
    <string name="hot_search">热门搜索</string>
    <string name="history_searches">历史搜索</string>
    <string name="destination">目的地</string>
    <string name="choose_date">选择日期</string>
    <!-- 首页-美食 -->
    <string name="buffet">自助餐</string>
    <string name="cake_and_milk_tea">蛋糕奶茶</string>
    <string name="hot_pot">火锅</string>
    <string name="snack_and_fast_food">小吃快餐</string>
    <string name="western_food">西餐</string>
    <!-- 首页-丽人 -->
    <string name="hairdressing">美发</string>
    <string name="nail_art">美甲美瞳</string>
    <string name="beauty_body">美容美体</string>
    <string name="medical_cosmetology">医学美容</string>
    <string name="slimming">纤体瘦身</string>
    <!-- 首页-休闲娱乐 -->
    <string name="fitness">健身/运动</string>
    <string name="chamber">密室</string>
    <string name="table_games">桌面游戏</string>
    <string name="internet_cafe_and_gaming">网吧/电竞</string>
    <string name="bombardment_tube">轰趴管</string>

    <string name="collection">收藏</string>
    <string name="recently_viewed">最近浏览</string>
    <string name="voucher_package">券包</string>
    <string name="settings">设置</string>
    <string name="personal_information">个人信息</string>
    <string name="my_collection">我的收藏</string>
    <string name="before_payment">待付款</string>
    <string name="default_store_name">店名xxxxxxxxxxxxxxxxxxxxxxxxxxx</string>
    <string name="default_pos">位置</string>
    <string name="default_address">地址</string>
    <string name="default_price">人均￥45起</string>
    <string name="store_icon">店铺图片</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="link_sign_up">没有账号？马上注册</string>
    <string name="account">手机号</string>
    <string name="check_password">确认密码</string>
    <string name="register">注册</string>
    <string name="link_sign_in">已有账号？马上登录</string>
    <string name="store_info">店铺详情</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="store_name">海底捞火锅</string>
    <string name="store_product">团购</string>
    <string name="store_evaluation">评价</string>
    <string name="busy_server">服务器繁忙，请稍后重试</string>
    <string name="new_order_failed">创建订单失败，请稍后重试</string>

    <string name="app_name">Alipay SDK Demo</string>
    <string name="demo_info_text">Warning: \n\nFor demonstration purpose, the assembling and signing of the request parameters are done on the client side.\nHowever, in practice, both assembling and signing MUST BE carried out on the server side.</string>
    <string name="pay_with_alipay">Pay with Alipay</string>
    <string name="pay_with_alipay_hk">Pay with AlipayHK</string>
    <string name="auth_with_alipay">Authenticate with Alipay</string>
    <string name="web_to_native">Call Alipay from Web Content</string>
    <string name="check_sdk_version">Alipay SDK Version</string>
    <string name="pay_success">Payment success:</string>
    <string name="auth_failed">Authentication failed:</string>
    <string name="permission_already_granted">Required permissions have already been granted to AlipaySDK</string>
    <string name="permission_rejected">Missing permissions. Please grant required permissions in system settings</string>
    <string name="permission_granted">Required permissions have been granted to AlipaySDK</string>
    <string name="error_missing_appid_rsa_private">Error: Missing \"APPID\" or \"RSA_PRIVATE\" in PayDemoActivity.</string>
    <string name="error_missing_hk_partner_seller_rsa_private">Error: Missing \"PARTNER\", \"SELLER\", or \"RSA_PRIVATE\\ in OrderUtils1_0_HK.</string>
    <string name="pay_result">Payment result:</string>
    <string name="error_auth_missing_partner_appid_rsa_private_target_id">Error: Missing \"PARTNER\", \"APP_ID\", \"RSA_PRIVATE\", or \"TARGET_ID\" in PayDemoActivity.</string>
    <string name="confirm">Confirm</string>
    <string name="pay_failed">Payment failed:</string>
    <string name="auth_success">Authentication success:</string>
    <string name="alipay_sdk_version_is">"Alipay SDK version: "</string>
    <string name="error_missing_h5_pay_url">Missing URL to load. Please configure in PayDemoActivity.h5Pay()</string>
    <string name="error">Error</string>
    <string name="pay_cross_border">Cross-border Pay with Alipay</string>
    <string name="error_missing_global_partner_seller_rsa_private">Error: Missing \"PARTNER\", \"SELLER\", or \"RSA_PRIVATE\\ in OrderUtils1_0_Global.</string>
    <string name="payment_inst_hk">Payer: HK</string>
    <string name="payment_inst_cn">Payer: CN</string>

    <string name="package_details">套餐详情</string>
    <string name="product_note">随时退 | 免预约 | 过期自动退</string>
    <string name="half_year_sale">半年销量</string>
    <string name="sweat_note">温馨提醒</string>
    <string name="buy_now">立即购买</string>
    <string name="submit_order_viable_time">周一到周日 | 免预约</string>
    <string name="submit_order_number">数量</string>
    <string name="submit_order_subtotal">小计</string>
    <string name="submit_order_coupons">优惠券</string>
    <string name="submit_order_phone">手机号</string>
    <string name="submit_order_total">总计: </string>
    <string name="store_booking">预约</string>
    <string name="recentlyView">最近浏览</string>
    <string name="reservation_number">请选择用餐人数</string>
</resources>
