<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
   
        <Button
            android:id="@+id/payV2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="payV2"
            android:textAllCaps="false"
            android:text="@string/pay_with_alipay" />

        <Button
            android:id="@+id/authV2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="authV2"
            android:textAllCaps="false"
            android:text="@string/auth_with_alipay" />
        
        <Button
            android:id="@+id/h5pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="h5Pay"
            android:textAllCaps="false"
            android:text="@string/web_to_native" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="showSdkVersion"
            android:textAllCaps="false"
            android:text="@string/check_sdk_version" />
        
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/demo_info_text"
            android:textColor="#F4333C" />
    </LinearLayout>

</ScrollView>