<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="4dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/discover_store_icon"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:contentDescription="@string/store_icon"
            android:src="@drawable/temp_map" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/discover_store_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:maxEms="15"
                android:text="@string/default_store_name"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/discover_store_pos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:ellipsize="end"
                android:lines="1"
                android:maxEms="15"
                android:text="@string/default_pos"
                android:textColor="@color/pos_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/discover_store_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:ellipsize="end"
                android:lines="1"
                android:maxEms="15"
                android:text="@string/default_address"
                android:textColor="@color/pos_color"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/discover_star"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:src="@drawable/three_and_half"
                android:layout_marginTop="4dp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/discover_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="2dp"
                android:ellipsize="end"
                android:gravity="end"
                android:maxEms="18"
                android:text="@string/default_price"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

    </LinearLayout>

    <View
        android:id="@+id/discover_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp" />

</LinearLayout>
