<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/discover_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/touch_bg"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    card_view:cardCornerRadius="10dp">

    <LinearLayout
        android:id="@+id/discover_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/discover_store_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/store_icon"
                android:scaleType="fitXY"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/temp_map" />
            <TextView
                android:id="@+id/discover_store_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:background="@color/distance_background_color"
                android:textSize="12sp"
                android:text="asd"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/discover_store_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/default_store_name"
                android:textColor="@color/text_dark_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/discover_store_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:lines="1"
                android:maxEms="15"
                android:text="@string/default_pos"
                android:textColor="@color/pos_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/discover_store_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:lines="1"
                android:maxEms="15"
                android:text="@string/default_address"
                android:textColor="@color/pos_color"
                android:textSize="12sp" />

            <com.iarcuschin.simpleratingbar.SimpleRatingBar
                android:id="@+id/discover_store_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="8dp"
                app:srb_borderColor="@color/star_yellow"
                app:srb_fillColor="@color/star_yellow"
                app:srb_isIndicator="true"
                app:srb_numberOfStars="5"
                app:srb_rating="3"
                app:srb_starBorderWidth="2"
                app:srb_starCornerRadius="3"
                app:srb_starSize="15dp"
                app:srb_stepSize="0.5" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/discover_rel2"
            android:layout_weight="1">
            <Button
                android:id="@+id/discover_guide"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/discover_goto"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp" />
            <TextView
                android:id="@+id/discover_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="2dp"
                android:ellipsize="end"
                android:gravity="end"
                android:maxLines="1"
                android:text="@string/default_price"
                android:textColor="@color/text_dark_color"
                android:textSize="14sp" />

        </RelativeLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>
