<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary">

        <android.support.v7.widget.AppCompatImageButton
            android:id="@id/common_toolbar_function_left"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:background="@color/colorPrimary"
            android:src="@drawable/ic_arrow_back_24dp" />

        <LinearLayout
            android:id="@id/home_search_layout"
            android:layout_width="240dp"
            android:layout_height="32dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/shape_home_search_bar"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/search"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical"
                android:maxWidth="300dp"
                android:maxLines="1"
                android:hint="城隍庙海底捞"
                android:textColor="#666666" />

        </LinearLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@id/common_toolbar_function_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:text="@string/search"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </android.support.v7.widget.Toolbar>

    <!-- 热门搜索标题 -->
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:text="@string/hot_search"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp" />

    <!-- 热门搜索数据 -->
    <android.support.v7.widget.RecyclerView
        android:id="@id/hot_search_ry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:overScrollMode="never"
        android:scrollbars="none" />

    <!-- 历史搜索标题 -->
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:text="@string/history_searches"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp" />

    <!-- 历史搜索数据 -->
    <android.support.v7.widget.RecyclerView
        android:id="@id/history_search_ry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:overScrollMode="never"
        android:scrollbars="none" />

</LinearLayout>